Updated the side menu to display on top of the mapComponent and the carousel.  Was having difficulty trying to figure out where to put the Z-index for the side menu to solve the issue.  implimented on the header element on the main layout.jsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,9 @@ body {
     text-wrap: balance;
   }
 }
+
+.leaflet-wrap{
+  z-index: 10;
+  width: 100%;
+  height: 30vh;
+}
